--- a/src/style.css
+++ b/src/style.css
@@ -3,22 +3,38 @@
   src: url('./assets/fonts/RockSalt-Regular.ttf');
 }
 
-@font-face {
+/* @font-face {
   font-family: 'Walter-Turncoat';
   src: url(./assets/fonts/WalterTurncoat-Regular.ttf);
+} */
+
+@font-face {
+  font-family: 'Cardo';
+  src: url(./assets/fonts/Cardo-Regular.ttf);
+}
+
+@font-face {
+  font-family: 'Cardo-Bold';
+  src: url(./assets/fonts/Cardo-Bold.ttf);
 }
 
 * {
-  font-family: Walter-Turncoat, serif;
+  font-family: Cardo, serif;
   font-weight: 700;
 }
 
 body {
   background-color: rgb(73, 72, 72);
+  /* background-color: orange; */
   margin: 0;
   /* max-width: 1000px; */
   display: flex;
   flex-direction: column;
+  height: 100vh;
+  /* background-image: url(./assets/images/line-c58-g-no-gradient.jpg); */
+  background-image: url(./assets/images/darryl-low-lMNMJ50Kwgk-unsplash.jpg);
+  background-size: 100%;
+  background-position: center;
 
 }
 
@@ -33,25 +49,28 @@ body {
 
 .logo-wrapper {
   /* background-color: rgb(73, 72, 72); */
-  background-image: 
+  /* background-image: 
     linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(./assets/images/brick-2906556_1920.jpg);
-  /* background-size: 100%; */
+    url(./assets/images/line-bottom-desktop.jpeg); */
+    /* url(./assets/images/brick-2906556_1920.jpg); */
+  background-position-y: -3em;
+  background-size: 110%;
   display: flex;
   /* justify-content: space-around; */
-  height: 20em;
+  height: 13em;
   align-items: start;
-  gap: 2em;
+  /* gap: 1em; */
   /* border-bottom: 5em solid whitesmoke; */
+  background-color:  rgba(0,0,0,0.7);
 }
 
 .logo-image {
   background-image: url(./assets/images/patrice-chef.png);
-  background-size: 100%;
+  background-size: 65%;
   background-position: top;
   background-repeat: no-repeat;
-  background-position-x: -1 ;
-  height: 320px;
+  background-position-x: 0 ;
+  height: 208px;
   min-width: 350px;
   /* z-index: 0; */
 }
@@ -66,44 +85,136 @@ body {
 
 .logo-title {
   font-family: Rocksalt, serif;
-  font-size: 6em;
+  font-size: 4em;
+  letter-spacing: .3em;
   margin: 0;
+  margin-top: -.3em;
 }
 
 .logo-subtitle {
- margin-top: -1em;
- letter-spacing: .6em;
- /* font-size: 1.3em; */
- color: white;
+ /* font-family: Cardo-Bold; */
+ /* padding: .1em .6em .1em .6em; */
+ margin-top: -.7em;
+ letter-spacing: .55em;
+ font-size: .9em;
+ color: aliceblue;
+ /* background-color: orange; */
 }
 
-.navmenu-wrapper {
-  background-color: aliceblue;
-  height: 3em;
+.logo-quote {
+  display: none;
+  align-self: center;
+  margin-left: 18em;
+  margin-right: 2em;
+  text-align: center;
+  letter-spacing: .3em;
+  width: 20em;
+  color: white;
+  /* font-size: 1em; */
+  font-style: italic;
+}
+
+@media screen and (min-width: 1400px){
+  .logo-quote {
+    display: block;
+  }  
+}
+
+.nav-tab-wrapper {
+  background-color: rgba(0,0,0,0.9);
+  height: 2em;
   display: flex;
   justify-content: center;
   gap: 2em;
+  /* border-top: 2px solid aliceblue; */
   /* z-index: 1; */
 }
 
-.navmenu {
-  background-color: aliceblue;
+.nav-tab {
+  background-color: rgba(0,0,0,0.0);
   border: none;
   width: 10em;
   font-size: 1.1em;
+  color: aliceblue;
+  /* padding: 0 1em; */
   /* z-index: 1; */
   /* border-bottom: 6px solid white; */
 }
 
-.navmenu:hover {
+.nav-tab:hover {
   /* border: 6px solid orange; */
   background-color: orange;
-  color: aliceblue;
-  font-size: 2em;
-  transition: 150ms;
+  /* background-color: rgba(73, 72, 72,.2); */
+  /* color: orange; */
+  color: black;
+  font-size: 1.3em;
+  
+  /* font-family: Rocksalt; */
+  letter-spacing: .5em;
+  /* border-bottom: 1px solid aliceblue; */
+  transition: 400ms;
 }
 
 .content-wrapper {
-  background-color: rgb(72,72,72);
-  height: 100px;
+  background-color: rgba(0,0,0,0.7);
+  background-size: 100%;
+  color: aliceblue;
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
 }
+
+.menu-wrapper {
+  margin-top: 2em;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1em;
+  /* display: flex; */
+  justify-items: center;
+  /* justify-content: center; */
+  /* width: 500px; */
+
+}
+
+.wine {
+  grid-column: 1/3;
+  /* width: 100%; */
+  /* text-align: center; */
+}
+.course {
+  text-align: center;
+  font-family: Rocksalt;
+  font-size: 1em;
+  letter-spacing: .2em;
+  /* margin-top: 1em; */
+  /* margin-left: 2em; */
+  /* margin-bottom: .5em; */
+  color: orange;
+}
+.menu-item {
+  /* border: 2px solid black; */
+  /* background-color: grey; */
+  
+  text-align: center;
+  padding: .8em;
+  color: ghostwhite;
+  
+}
+
+.menu-item-name {
+  font-family: Cardo, serif;
+  font-weight: normal;
+  font-size: 1.4em;
+  letter-spacing: .1em;
+  margin: 0;
+}
+
+.menu-item-info {
+  font-weight: normal;
+  margin: 0;
+  max-width: 30em;
+}
+
+/* .wine2 {
+  width: 100%;
+} */
