--- a/src/style.css
+++ b/src/style.css
@@ -58,20 +58,26 @@ body {
   display: flex;
   /* justify-content: space-around; */
   height: 13em;
-  align-items: start;
-  /* gap: 1em; */
+  align-items: center;
+  gap: 3em;
   /* border-bottom: 5em solid whitesmoke; */
   background-color:  rgba(0,0,0,0.7);
 }
 
 .logo-image {
   background-image: url(./assets/images/patrice-chef.png);
-  background-size: 65%;
+  background-size: 120%;
   background-position: top;
   background-repeat: no-repeat;
-  background-position-x: 0 ;
-  height: 208px;
-  min-width: 350px;
+  background-position-x:  -1.5em;
+  height: 170px;
+  min-width: 170px;
+  border-radius: 100%;
+  background-color: orange;
+  margin-left: 3em ;
+  /* margin-top: -1em; */
+  /* padding: 2em; */
+  /* border: 5px solid white; */
   /* z-index: 0; */
 }
 
@@ -126,6 +132,7 @@ body {
   display: flex;
   justify-content: center;
   gap: 2em;
+  /* margin-top: -2em ; */
   /* border-top: 2px solid aliceblue; */
   /* z-index: 1; */
 }
