--- a/src/style.css
+++ b/src/style.css
@@ -3,11 +3,6 @@
   src: url('./assets/fonts/RockSalt-Regular.ttf');
 }
 
-/* @font-face {
-  font-family: 'Walter-Turncoat';
-  src: url(./assets/fonts/WalterTurncoat-Regular.ttf);
-} */
-
 @font-face {
   font-family: 'Cardo';
   src: url(./assets/fonts/Cardo-Regular.ttf);
@@ -24,23 +19,18 @@
 }
 
 body {
-  background-color: rgb(73, 72, 72);
-  /* background-color: orange; */
+  background-color: rgb(0,0,0);
   margin: 0;
-  /* max-width: 1000px; */
+  color: aliceblue;
   display: flex;
   flex-direction: column;
+  align-items: center;
   height: 100vh;
-  /* background-image: url(./assets/images/line-c58-g-no-gradient.jpg); */
-  background-image: url(./assets/images/darryl-low-lMNMJ50Kwgk-unsplash.jpg);
-  background-size: 100%;
+  background-image: url(./assets/images/backgrounds/2.jpg);
+  background-size: 2600px;
   background-position: center;
-
+  transition: background-image 3s;
 }
-
-/* .content-wrapper {
-  min-width: 950px;
-} */
 
 .hello {
     color: orange;
@@ -48,19 +38,15 @@ body {
 }
 
 .logo-wrapper {
-  /* background-color: rgb(73, 72, 72); */
-  /* background-image: 
-    linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(./assets/images/line-bottom-desktop.jpeg); */
-    /* url(./assets/images/brick-2906556_1920.jpg); */
   background-position-y: -3em;
   background-size: 110%;
   display: flex;
-  /* justify-content: space-around; */
-  height: 13em;
+  justify-content: center;
+  height: 10em;
+  width: 100vw;
+  max-width: 65em;
   align-items: center;
   gap: 3em;
-  /* border-bottom: 5em solid whitesmoke; */
   background-color:  rgba(0,0,0,0.7);
 }
 
@@ -69,16 +55,13 @@ body {
   background-size: 120%;
   background-position: top;
   background-repeat: no-repeat;
-  background-position-x:  -1.5em;
-  height: 170px;
-  min-width: 170px;
+  background-position-x:  -1.1em;
+  min-height: 130px;
+  min-width: 130px;
   border-radius: 100%;
   background-color: orange;
   margin-left: 3em ;
-  /* margin-top: -1em; */
-  /* padding: 2em; */
-  /* border: 5px solid white; */
-  /* z-index: 0; */
+  
 }
 
 .logo-title-wrapper {
@@ -91,38 +74,21 @@ body {
 
 .logo-title {
   font-family: Rocksalt, serif;
-  font-size: 4em;
+  font-size: 3.3em;
   letter-spacing: .3em;
   margin: 0;
   margin-top: -.3em;
 }
 
 .logo-subtitle {
- /* font-family: Cardo-Bold; */
- /* padding: .1em .6em .1em .6em; */
  margin-top: -.7em;
  letter-spacing: .55em;
- font-size: .9em;
- color: aliceblue;
- /* background-color: orange; */
+ font-size: .8em;
 }
 
-.logo-quote {
-  display: none;
-  align-self: center;
-  margin-left: 18em;
-  margin-right: 2em;
-  text-align: center;
-  letter-spacing: .3em;
-  width: 20em;
-  color: white;
-  /* font-size: 1em; */
-  font-style: italic;
-}
-
-@media screen and (min-width: 1400px){
-  .logo-quote {
-    display: block;
+@media screen and (max-width: 780px){
+  .logo-image {
+    display: none;
   }  
 }
 
@@ -131,10 +97,9 @@ body {
   height: 2em;
   display: flex;
   justify-content: center;
+  width: 100vw;
+  max-width: 65em;
   gap: 2em;
-  /* margin-top: -2em ; */
-  /* border-top: 2px solid aliceblue; */
-  /* z-index: 1; */
 }
 
 .nav-tab {
@@ -143,69 +108,38 @@ body {
   width: 10em;
   font-size: 1.1em;
   color: aliceblue;
-  /* padding: 0 1em; */
-  /* z-index: 1; */
-  /* border-bottom: 6px solid white; */
 }
 
 .nav-tab:hover {
-  /* border: 6px solid orange; */
   background-color: orange;
-  /* background-color: rgba(73, 72, 72,.2); */
-  /* color: orange; */
   color: black;
   font-size: 1.3em;
-  
-  /* font-family: Rocksalt; */
   letter-spacing: .5em;
-  /* border-bottom: 1px solid aliceblue; */
   transition: 400ms;
 }
 
-.content-wrapper {
+#content {
+  padding-top: 2em;
   background-color: rgba(0,0,0,0.7);
   background-size: 100%;
-  color: aliceblue;
   flex-grow: 1;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
+  max-width: 65em;
 }
 
-.menu-wrapper {
-  margin-top: 2em;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 1em;
-  /* display: flex; */
-  justify-items: center;
-  /* justify-content: center; */
-  /* width: 500px; */
-
-}
-
-.wine {
-  grid-column: 1/3;
-  /* width: 100%; */
-  /* text-align: center; */
-}
 .course {
   text-align: center;
   font-family: Rocksalt;
   font-size: 1em;
   letter-spacing: .2em;
-  /* margin-top: 1em; */
-  /* margin-left: 2em; */
-  /* margin-bottom: .5em; */
   color: orange;
+  margin: .5em;
 }
 .menu-item {
-  /* border: 2px solid black; */
-  /* background-color: grey; */
-  
   text-align: center;
   padding: .8em;
-  color: ghostwhite;
-  
 }
 
 .menu-item-name {
@@ -221,7 +155,3 @@ body {
   margin: 0;
   max-width: 30em;
 }
-
-/* .wine2 {
-  width: 100%;
-} */
