--- a/src/style.css
+++ b/src/style.css
@@ -111,6 +111,7 @@ body {
   color: aliceblue;
 }
 
+.highlight,
 .nav-tab:hover {
   background-color: orange;
   color: black;
@@ -131,16 +132,20 @@ body {
   max-width: 63em;
   gap: 1.5em;
   text-align: center;
-  
+  margin-bottom: 0;
 }
 
 .home-wrapper {
+  margin-top: 1em;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1em;
+  /* padding: 1em; */
   max-width: 42em;
   gap: .8em;
+  overflow: hidden;
+  /* margin-bottom: 0; */
+  /* padding-bottom: 0; */
 }
 
 .home-wrapper > p:first-of-type {
@@ -150,6 +155,7 @@ body {
   line-height: 2em;
   text-align: justify;
   padding-bottom: 1em;
+  font-style: oblique;
 }
 
 .course-wrapper {
@@ -205,4 +211,9 @@ p {
 iframe {
   border-radius: 1em;
   border: 2px solid orange;
+}
+
+span {
+  font-weight: normal;
+  color: orange;
 }
