Seperate code in more modules

--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@ body {
   width: 100vw;
   background-image: url(./assets/images/backgrounds/4.jpg);
   background-position: center;
-  transition: background-image 4s;
+  transition: background-image ease-in-out 4s;
 }
 
 .logo-wrapper {
