--- a/src/style.css
+++ b/src/style.css
@@ -78,7 +78,7 @@ body {
   background-size: contain;
   margin-top: -.5em;
   height: 3em;
-  width: 7em;
+  width: 6em;
 }
 
 @media screen and (max-width: 780px){
@@ -127,7 +127,6 @@ body {
   gap: 1.5em;
   text-align: center;
   margin-bottom: 0;
-  
 }
 
 .home-wrapper {
@@ -138,11 +137,9 @@ body {
   max-width: 42em;
   gap: .8em;
   overflow: hidden;
-  
 }
 
 .home-wrapper > p:first-of-type {
-  
   font-size: 1.2em;
   letter-spacing: .05em;
   line-height: 2em;
@@ -153,6 +150,11 @@ body {
 
 .course-wrapper {
   max-width: 28em;
+}
+
+.course-wrapper p {
+  margin-top: -.4em;
+  margin-bottom: .3em;
 }
 
 .course-wrapper:last-child {
